# yueduqi-tauri

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/parsers/: biquge.rs  guangyu.rs  mod.rs  qixinge.rs
src/pages/: ChaptersPage.tsx  ReaderPage.tsx  SearchPage.tsx
